// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UserMenu > renders a button 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="User menu"
    class="UserMenu-module_triggerButton"
    data-state="closed"
    id="radix-_r_0_"
    type="button"
  >
    <span
      aria-label="@person-name:homeserver.com"
      class="_avatar_va14e_8"
      data-color="1"
      data-type="round"
      role="img"
      style="--cpd-avatar-size: 36px;"
    >
      <img
        alt=""
        class="_image_va14e_43"
        data-type="round"
        height="36px"
        loading="lazy"
        referrerpolicy="no-referrer"
        src="/static/element.png"
        width="36px"
      />
    </span>
    <span
      class="_typography_6v6n8_153 _font-heading-sm-semibold_6v6n8_93"
    >
      Sally Sanderson
    </span>
  </button>
</div>
`;

exports[`UserMenu > renders a button with a longer name 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="User menu"
    class="UserMenu-module_triggerButton"
    data-state="closed"
    id="radix-_r_2_"
    type="button"
  >
    <span
      aria-label="@person-name:homeserver.com"
      class="_avatar_va14e_8"
      data-color="1"
      data-type="round"
      role="img"
      style="--cpd-avatar-size: 36px;"
    >
      <img
        alt=""
        class="_image_va14e_43"
        data-type="round"
        height="36px"
        loading="lazy"
        referrerpolicy="no-referrer"
        src="/static/element.png"
        width="36px"
      />
    </span>
    <span
      class="_typography_6v6n8_153 _font-heading-sm-semibold_6v6n8_93"
    >
      Sally Sanderson with a longer name
    </span>
  </button>
</div>
`;

exports[`UserMenu > renders a guest menu 1`] = `
<body>
  
  


  <div>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="User menu"
      class="UserMenu-module_triggerButton"
      data-state="closed"
      id="radix-_r_8_"
      type="button"
    >
      <span
        aria-label="@guest:attendees.example.org"
        class="_avatar_va14e_8"
        data-color="4"
        data-type="round"
        role="img"
        style="--cpd-avatar-size: 36px;"
      >
        <img
          alt=""
          class="_image_va14e_43"
          data-type="round"
          height="36px"
          loading="lazy"
          referrerpolicy="no-referrer"
          src="/static/element.png"
          width="36px"
        />
      </span>
      <span
        class="_typography_6v6n8_153 _font-heading-sm-semibold_6v6n8_93"
      >
        Guest
      </span>
    </button>
  </div>
</body>
`;

exports[`UserMenu > renders a menu 1`] = `
<body>
  
  


  <div>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="User menu"
      class="UserMenu-module_triggerButton"
      data-state="closed"
      id="radix-_r_6_"
      type="button"
    >
      <span
        aria-label="@person-name:homeserver.com"
        class="_avatar_va14e_8"
        data-color="1"
        data-type="round"
        role="img"
        style="--cpd-avatar-size: 36px;"
      >
        <img
          alt=""
          class="_image_va14e_43"
          data-type="round"
          height="36px"
          loading="lazy"
          referrerpolicy="no-referrer"
          src="/static/element.png"
          width="36px"
        />
      </span>
      <span
        class="_typography_6v6n8_153 _font-heading-sm-semibold_6v6n8_93"
      >
        Sally Sanderson
      </span>
    </button>
  </div>
</body>
`;

exports[`UserMenu > renders condensed view 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="User menu"
    class="UserMenu-module_triggerButton"
    data-state="closed"
    id="radix-_r_4_"
    type="button"
  >
    <span
      aria-label="@person-name:homeserver.com"
      class="_avatar_va14e_8"
      data-color="1"
      data-type="round"
      role="img"
      style="--cpd-avatar-size: 36px;"
    >
      <img
        alt=""
        class="_image_va14e_43"
        data-type="round"
        height="36px"
        loading="lazy"
        referrerpolicy="no-referrer"
        src="/static/element.png"
        width="36px"
      />
    </span>
  </button>
</div>
`;
